--- a/project/nulla-mauris-sit/index.html
+++ b/project/nulla-mauris-sit/index.html
@@ -136,7 +136,7 @@
 
 
 				<li>
-					<a href="http://www.facebook.com/nixon.example" target="_blank" title="Join me on Facebook" class="facebook"><span class="icon icon-facebook"></span>Facebook</a>
+					<a href="http://www.facebook.com/tsteggall" target="_blank" title="Join me on Facebook" class="facebook"><span class="icon icon-facebook"></span>Facebook</a>
 				</li>
 
 
@@ -276,7 +276,7 @@ Aliquam ullamcorper ultrices pellentesque.</p>
 					<span itemprop="name">Tim Steggall.</span>
 				</span>
 			
-			<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution">Some rights reserved</a>; 
+			<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution">Some rights reserved. Powered by the Nixon theme.</a>; 
 			please attribute properly and link back.
 			<br>
 			Powered by <a href="http://gohugo.io">Hugo</a>.
