--- a/presentation/aenean-odio-orci-mmxii/index.html
+++ b/presentation/aenean-odio-orci-mmxii/index.html
@@ -289,7 +289,7 @@ Data accessible to the rest of us</p>
 					<span itemprop="name">Tim Steggall.</span>
 				</span>
 			
-			<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution">Some rights reserved. Powered by the Nixon theme.</a>; 
+			<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution">Some rights reserved.</a>; 
 			please attribute properly and link back.
 			<br>
 			Powered by <a href="http://gohugo.io">Hugo</a>.
