About me update
small change to bio

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ url('/img/headers/library.jpg');
 
 <p>In my six years working in baseball operations, I have been parts analyst, administrator, coach, coordinator, and project manager. With the Tampa Bay Rays, I lived the “Moneyball” experience preparing the organization for the MLB Draft. I worked at the intersection of sports and analytics with goal of making the best decisions possible in a constantly changing environment.</p>
 
-<p>This blog is partly an attempt to research and quantify the random ideas and questions that pop into my head, but also a location to document my own personal growth - the books I&rsquo;ve read, the decisions I&rsquo;ve made (hopefully I can make the mundane stuff somewhat interesting), what works, what doesn&rsquo;t, and what decisions I would do differently if I had a do-over.</p>
+<p>Now that I have a bit more free time, this blog is both an attempt to research and quantify the random ideas and questions that pop into my head, and also a location to document my own personal growth - the books I&rsquo;ve read, the decisions I&rsquo;ve made (hopefully I can make the mundane stuff somewhat interesting), what works, what doesn&rsquo;t, and what decisions I would do differently if I had a mulligan.</p>
 
 
     <div class="row">
