--- a/project/coming-soon/index.html
+++ b/project/coming-soon/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="I plan to use the Projects space for larger, primarily data driven analyses. These larger projects will likely/hopefully tie into multiple blog posts.">
 
   
-  <link rel="alternate" hreflang="en-us" href="/project/coming-soon/">
+  <link rel="alternate" hreflang="en-us" href="https://tsteggall.github.io/project/coming-soon/">
 
   
 
@@ -61,15 +61,15 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
+  <link rel="alternate" href="https://tsteggall.github.io/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
+  <link rel="feed" href="https://tsteggall.github.io/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/project/coming-soon/">
+  <link rel="canonical" href="https://tsteggall.github.io/project/coming-soon/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -77,7 +77,7 @@
   <meta property="twitter:creator" content="@tgsteggall3">
   
   <meta property="og:site_name" content="Anecdotal Evidence">
-  <meta property="og:url" content="/project/coming-soon/">
+  <meta property="og:url" content="https://tsteggall.github.io/project/coming-soon/">
   <meta property="og:title" content="Coming Soon | Anecdotal Evidence">
   <meta property="og:description" content="I plan to use the Projects space for larger, primarily data driven analyses. These larger projects will likely/hopefully tie into multiple blog posts.">
   <meta property="og:locale" content="en-us">
@@ -258,35 +258,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Coming%20Soon&amp;url=%2fproject%2fcoming-soon%2f"
+         href="https://twitter.com/intent/tweet?text=Coming%20Soon&amp;url=https%3a%2f%2ftsteggall.github.io%2fproject%2fcoming-soon%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=%2fproject%2fcoming-soon%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2ftsteggall.github.io%2fproject%2fcoming-soon%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fproject%2fcoming-soon%2f&amp;title=Coming%20Soon"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2ftsteggall.github.io%2fproject%2fcoming-soon%2f&amp;title=Coming%20Soon"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fproject%2fcoming-soon%2f&amp;title=Coming%20Soon"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2ftsteggall.github.io%2fproject%2fcoming-soon%2f&amp;title=Coming%20Soon"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Coming%20Soon&amp;body=%2fproject%2fcoming-soon%2f">
+         href="mailto:?subject=Coming%20Soon&amp;body=https%3a%2f%2ftsteggall.github.io%2fproject%2fcoming-soon%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
