--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Formerly Rays Front Office. Recently moved to San Francisco.">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication_types/">
+  <link rel="alternate" hreflang="en-us" href="https://tsteggall.github.io/publication_types/">
 
   
 
@@ -59,15 +59,15 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
+  <link rel="alternate" href="https://tsteggall.github.io/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
+  <link rel="feed" href="https://tsteggall.github.io/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication_types/">
+  <link rel="canonical" href="https://tsteggall.github.io/publication_types/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -75,7 +75,7 @@
   <meta property="twitter:creator" content="@tgsteggall3">
   
   <meta property="og:site_name" content="Anecdotal Evidence">
-  <meta property="og:url" content="/publication_types/">
+  <meta property="og:url" content="https://tsteggall.github.io/publication_types/">
   <meta property="og:title" content="Publication_types | Anecdotal Evidence">
   <meta property="og:description" content="Formerly Rays Front Office. Recently moved to San Francisco.">
   <meta property="og:locale" content="en-us">
