--- a/404.html
+++ b/404.html
@@ -57,8 +57,8 @@
   
 
   
-  <link rel="alternate" href="https://tsteggall.github.io/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
-  <link rel="feed" href="https://tsteggall.github.io/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Anecdotal Evidence">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -245,7 +245,11 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="https://tsteggall.github.io/post/book-list/">2018 Book List</a></li>
+    <li><a href="/post/2017-book-list/">2017 Book List</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/book-list/">2018 Book List</a></li>
   </ul>
   
   
@@ -261,7 +265,7 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="https://tsteggall.github.io/project/coming-soon/">Coming Soon</a></li>
+    <li><a href="/project/coming-soon/">Coming Soon</a></li>
   </ul>
   
   
