--- a/index.html
+++ b/index.html
@@ -365,9 +365,11 @@ url('https://tsteggall.github.io/img/headers/library.jpg');
 
 <h1 id="biography">Biography</h1>
 
-<p>In my six years working in baseball operations, I have been part analyst, administrator, coach, coordinator, and project manager. With the Tampa Bay Rays, I lived the “Moneyball” experience preparing the organization for the MLB Draft. I worked at the intersection of sports and analytics with goal of making the best decisions possible in a constantly changing environment.</p>
+<p>In my six years working in baseball operations, I was part analyst, administrator, coach, coordinator, and project manager. With the Tampa Bay Rays, I lived the “Moneyball” experience preparing the organization for the MLB Draft. I worked at the intersection of sports and analytics with goal of making the best decisions possible with all the information and data at hand.</p>
 
-<p>Now that I have a bit more free time, this blog is both an attempt to research and quantify the random ideas and questions that pop into my head, and also a location to document my own personal growth - the books I&rsquo;ve read, the decisions I&rsquo;ve made (hopefully I can make the mundane stuff somewhat interesting), what works, what doesn&rsquo;t, and what decisions I would do differently if I had a mulligan.</p>
+<p>I left the Rays in January 2018 to move to San Francisco and get involved in the midterms. For the last nine months I&rsquo;ve been managing a State Assembly campaign in the East Bay (nice transition from one low stress job to another). This blog will primarily be a place for me to research and examine the common questions and talking points I ran into, both in baseball and politics. I&rsquo;ve had a firsthand look at the inner workings of two pretty interesting industries - and honestly I&rsquo;m left with way more questions than answers. Hopefully I can dig into many of those questions here.</p>
+
+<p>This blog will also be a location to document my own personal growth - what I&rsquo;m reading, the decisions I&rsquo;ve made (hopefully I can make the mundane stuff somewhat interesting), what works, what doesn&rsquo;t, and what decisions I would do differently if I had a mulligan.</p>
 
 
     <div class="row">
