--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="Formerly Rays Front Office. Recently moved to San Francisco.">
+  <meta name="description" content="Formerly Rays Front Office. RBK for Assembly 2018.">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -75,7 +75,7 @@
   <meta property="og:site_name" content="Anecdotal Evidence">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Anecdotal Evidence">
-  <meta property="og:description" content="Formerly Rays Front Office. Recently moved to San Francisco.">
+  <meta property="og:description" content="Formerly Rays Front Office. RBK for Assembly 2018.">
   <meta property="og:locale" content="en-us">
   
   
