--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -15,7 +15,7 @@
   
   
   
-  <meta name="description" content="Formerly Rays Front Office. Recently moved to San Francisco.">
+  <meta name="description" content="Formerly Rays Front Office. RBK for Assembly 2018.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://tsteggall.github.io/publication_types/">
@@ -77,7 +77,7 @@
   <meta property="og:site_name" content="Anecdotal Evidence">
   <meta property="og:url" content="https://tsteggall.github.io/publication_types/">
   <meta property="og:title" content="Publication_types | Anecdotal Evidence">
-  <meta property="og:description" content="Formerly Rays Front Office. Recently moved to San Francisco.">
+  <meta property="og:description" content="Formerly Rays Front Office. RBK for Assembly 2018.">
   <meta property="og:locale" content="en-us">
   
   
