--- a/404.html
+++ b/404.html
@@ -258,7 +258,11 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/tidy-tuesday-medium/">#Tidy Tuesday 12-4-2018: Medium Blog Posts</a></li>
+    <li><a href="/post/color-of-law/">The Color of Law by Richard Rothstein</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/tidy-tuesday-medium/">#TidyTuesday Week 36: Medium Blog Posts</a></li>
   </ul>
   
   <ul>
