--- a/404.html
+++ b/404.html
@@ -258,6 +258,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/tidytuesday-nycrestaurants/">#TidyTuesday Week 37: NYC Restaurant Inspections</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/color-of-law/">The Color of Law by Richard Rothstein</a></li>
   </ul>
   
